--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "ssr-client-app",
   "version": "0.0.0",
   "scripts": {
+    "dev:ssr": "ng run ssr-client-app:serve-ssr",
+    "serve:ssr": "node dist/ssr-client-app/server/server.mjs",
+    "build:ssr": "ng build && ng run ssr-client-app:server",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
